--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -21,3 +21,9 @@ a:hover {
     color: #ed7854;
     text-decoration: none;
 }
+
+.site-title, .site-title:visited {
+    font-family: "Quicksand", serif;
+    letter-spacing: .1rem;
+    font-weight: 500;
+}
