--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,1 +1,2 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Quicksand:500,400,300' rel='stylesheet' type='text/css'>
